// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VotesFilter > should render 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-14zm422"
          >
            <div
              class="flex h-5 w-5 items-center justify-center"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="sliders-vertical"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter > should render default 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-14zm422"
          >
            <div
              class="flex h-5 w-5 items-center justify-center"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="sliders-vertical"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl shadow-votes-filter mx-4 sm:mx-0 css-jowtd0"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="flex w-56 flex-col items-start space-y-5 px-10 py-7 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="flex h-5 cursor-pointer items-center space-x-3 rounded-md"
              data-testid="VotesFilter__option--all"
            >
              <input
                checked=""
                class="css-kf7z38"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="flex h-5 items-center space-x-3 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--current"
            >
              <input
                class="css-kf7z38"
                color="success"
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter > should render with current option selected 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-14zm422"
          >
            <div
              class="absolute right-1 top-0.5 flex h-3 w-3 items-center justify-center rounded-full bg-theme-background transition-all duration-100 ease-linear"
            >
              <div
                class="h-2 w-2 rounded-full bg-theme-primary-500"
              />
            </div>
            <div
              class="flex h-5 w-5 items-center justify-center"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="sliders-vertical"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl shadow-votes-filter mx-4 sm:mx-0 css-jowtd0"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="flex w-56 flex-col items-start space-y-5 px-10 py-7 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="flex h-5 cursor-pointer items-center space-x-3 rounded-md"
              data-testid="VotesFilter__option--all"
            >
              <input
                class="css-kf7z38"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="flex h-5 items-center space-x-3 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--current"
            >
              <input
                checked=""
                class="css-kf7z38"
                color="success"
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter > should render with disabled current option 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-14zm422"
          >
            <div
              class="flex h-5 w-5 items-center justify-center"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="sliders-vertical"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl shadow-votes-filter mx-4 sm:mx-0 css-jowtd0"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="flex w-56 flex-col items-start space-y-5 px-10 py-7 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="flex h-5 cursor-pointer items-center space-x-3 rounded-md"
              data-testid="VotesFilter__option--all"
            >
              <input
                checked=""
                class="css-kf7z38"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="flex h-5 items-center space-x-3 rounded-md text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="VotesFilter__option--current"
            >
              <input
                class="css-kf7z38"
                color="success"
                disabled=""
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
